# type

./: LICENSE  Makefile  NovaType  build.sh  callbacks.c  editor.c  editor.h  file_io.c  formatting.c  main.c  meson.build  novatype.vala  text_tags.c
data/: org.SuperUserNova.Type.desktop  resources.gresource.xml
exec/: novatype
src/: Application.vala  DocumentManager.vala  MainWindow.vala  Utils.vala
